ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            # update this line above
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 8080
     #     - path: /api/?(.*)
      #      backend:
       #       serviceName: client-cluster-ip-service
        #      servicePort: 4200
